trying to figure out parallax issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,8 @@ main {
     background-color: black;
 }
 .top-image {
-    width: 100%;
-    padding-top: 15rem;
-
+    /* width: 100%; */
+    padding-top: 15rem; 
 }
 #logo{
     margin: 0;
